--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/title_figure"
+        android:src="@drawable/title_figure4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,10 +41,21 @@
         android:layout_marginTop="16dp"
         android:text="Reservation"
         app:layout_constraintEnd_toEndOf="@+id/home_banner"
-        app:layout_constraintStart_toStartOf="@+id/home_banner"
+        app:layout_constraintHorizontal_bias="0.31"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_banner" />
 
     <!-- 我的预约列表标题 -->
+    <Button
+        android:id="@+id/btn_lucky"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="I feel lucky"
+        app:layout_constraintBottom_toBottomOf="@+id/button_reserve"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_reserve"
+        app:layout_constraintTop_toTopOf="@+id/button_reserve" />
+
     <TextView
         android:id="@+id/text_reservation_title"
         android:layout_width="wrap_content"
